returns totalCount for paginated query